# threads_popular_analyze

./: .gitignore  README.md  analyze.py  requirements.txt  result.jsonl  summarize.py  test_input.txt  visualize.py
config/: analysis_config.yaml  stopwords.txt  tw_slang.txt
services/: line_notifier.py  nlp_utils.py
web-spider/: .env.example  README.md  pyproject.toml  requirements.txt
web-spider/src/: crawler.py  login.py  main.py  parser.py  storage.py
web-spider/src/config/: config.yaml
web-spider/tests/: test_login.py  test_parser.py
